--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -1,20 +1,22 @@
 .dark {
-  background-color: grey;
+  --primary: var(--grey);
+  --secondary: var(--black);
 }
 
 .light {
   background-color: whitesmoke;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+:root {
+  --black: #000;
+  --light-blue: #2998ff;
+  --dark-blue: #135cc5;
+  --grey: #252c30;
+  /*intentions*/
+  --primary: var(--grey);
+  --secondary: var(--black);
+}
+
+body {
+  background-color: var(--primary);
 }
