--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -74,3 +74,25 @@ body {
   border-bottom: black solid 3px;
   margin-bottom: 5px;
 }
+
+.card-title {
+  margin: 20px;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.card-description {
+  text-align: center;
+  font-size: 1rem;
+  margin: 0.5rem 0.9rem;
+}
+
+.card-image {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: fit-content;
+  display: inline-block;
+  background-size: cover;
+}
