--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -35,12 +35,14 @@
 body {
   margin: 0px;
   padding: 0px;
+  background-color: var(--secondary);
 }
 .gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0px;
+  width: 92vw;
 }
 .card {
   background-color: whitesmoke;
@@ -64,15 +66,49 @@ body {
 .switch1 {
   scale: 1.5;
   position: absolute;
-  left: 24vw;
+  left: 30vw;
   top: 90vh;
+}
+
+.switch2 {
+  scale: 1.5;
+  position: absolute;
+  left: 95vw;
+  top: 10vh;
+}
+
+.switch3 {
+  scale: 1.5;
+  position: absolute;
+  left: 95vw;
+  top: 14vh;
+}
+
+.switch4 {
+  scale: 1.5;
+  position: absolute;
+  left: 95vw;
+  top: 18vh;
+}
+
+.switch5 {
+  scale: 1.5;
+  position: absolute;
+  left: 94vw;
+  top: 22vh;
+}
+
+.switch6 {
+  scale: 1.5;
+  position: absolute;
+  left: 90vw;
+  top: 24vh;
 }
 
 .header {
   font-size: 50px;
   text-align: center;
   border-bottom: black solid 3px;
-  margin-bottom: 5px;
 }
 
 .card-title {
@@ -82,17 +118,11 @@ body {
 }
 
 .card-description {
-  text-align: center;
+  justify-content: center;
   font-size: 1rem;
   margin: 0.5rem 0.9rem;
 }
 
 .card-image {
-  width: 100%;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: fit-content;
-  display: inline-block;
-  background-size: cover;
+  width: auto;
 }
