--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -37,10 +37,10 @@ body {
   padding: 0px;
   background-color: var(--secondary);
 }
-.gallery {
+.gallery, .card-gallery{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 0px;
   width: 92vw;
 }
