--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -119,11 +119,18 @@ body {
 
 .card-description {
   justify-content: center;
-  font-size: 1rem;
+  font-size: 0rem;
   margin: 0.5rem 0.9rem;
 }
 
-.card-image {
-  width: fit-content;
-  height: fit-content;
+.card-image img{
+  width: 16rem;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  max-width: 100%;
+  display: block;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
