--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -9,19 +9,15 @@
   
   --primary: var(--light-blue);
   --secondary: var(--dark-blue);
+  font-family: 'Rubik', sans-serif;
 }
-.dark {
+.warm {
   --primary: var(--light-red);
   --secondary: var(--dark-red);
 }
 .light {
   --primary: var(--light-blue);
   --secondary: var(--dark-blue);
-}
-
-.warm {
-  --primary: var(--gray);
-  --secondary: var(--black)
 }
 
 .header {
@@ -37,100 +33,128 @@ body {
   padding: 0px;
   background-color: var(--secondary);
 }
-.gallery, .card-gallery{
+.gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 0px;
-  width: 92vw;
+  width: 100vw;
+  margin: 0px;
 }
 .card {
   background-color: whitesmoke;
   border: 0.3rem solid black;
   border-radius: 30px;
-  width: 25vw;
-  height: 25vh;
+  width: 28vw;
+  height: 30vh;
   padding: 0%;
   margin: 1rem;
   align-items: center;
-  transition: all 0.3s
-}
-
-.switch {
-  scale: 1.5;
-  position: absolute;
-  left: 48vw;
-  top: 90vh;
-}
-
-.switch1 {
-  scale: 1.5;
-  position: absolute;
-  left: 30vw;
-  top: 90vh;
-}
-
-#switch2 {
-  scale: 1.5;
-  position: absolute;
-  left: 95vw;
-  top: 10vh;
-}
-
-#switch3 {
-  scale: 1.5;
-  position: absolute;
-  left: 95vw;
-  top: 14vh;
-}
-
-#switch4 {
-  scale: 1.5;
-  position: absolute;
-  left: 95vw;
-  top: 18vh;
-}
-
-#switch5 {
-  scale: 1.5;
-  position: absolute;
-  left: 94vw;
-  top: 22vh;
-}
-
-.switch6 {
-  scale: 1.5;
-  position: absolute;
-  left: 90vw;
-  top: 24vh;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  position: relative;
+  box-shadow: 0.5rem 0.3rem 0.2rem rgb(21, 22, 22);
 }
 
 .header {
-  font-size: 50px;
+  font-size: 60px;
   text-align: center;
   border-bottom: black solid 3px;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  height: 9rem; 
+  background-image: url("/public/Elmer's_logo.svg.png");
+  background-size: 35rem; /* Adjusts the background image to cover the entire header */
+  background-position: center; /* Centers the background image */
 }
 
 .card-title {
-  margin: 20px;
-  font-size: 2rem;
+  margin: 5px;
+  font-size: 2.2rem;
   text-align: center;
 }
 
 .card-description {
-  justify-content: center;
-  font-size: 0rem;
-  margin: 0.5rem 0.9rem;
+  font-size: 1rem;
+  text-align: center;
+  margin: 0.5rem 1rem;
 }
 
-.card-image img{
-  width: 16rem;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
+img{
+  max-width: 80%;
+  max-height: 65%;
   border-radius: 15px;
-  max-width: 100%;
-  display: block;
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
+  object-fit: cover;
+  aspect-ratio: 16 / 9;
+  margin-bottom: 1px;
 }
+
+.food-btn, .switch{
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+p {
+  margin: 0px;
+}
+
+.buttons {
+  position: absolute;
+  top: 0vh;
+  left: 0.5vw;
+}
+
+@media screen and (max-width:1200px) {
+  .card {
+    width: 20vw;
+  }
+}
+
+@media screen and (max-width:800px) {
+  .card {
+    width: 100vw;
+  }
+}
+
+.animation {
+  font-size: 3.5rem;
+  text-shadow: 0.25rem 0.15rem 0.1rem lightslategray;
+  animation: animation, bounce;
+  animation-duration: 3s, 1.8s;
+  animation-delay: 150ms, 3s;
+  animation-iteration-count: 1, infinite;
+  animation-timing-function: ease, ease-in-out;
+}
+
+@keyframes animation {
+  0% {
+     transform: translateY(-16rem);
+  }
+ 100%{
+  transform: translateY(0rem);
+ }
+} 
+
+@keyframes bounce {
+0%{
+  transform: translateY(0rem);
+}
+50% {
+  transform: translateY(0.75rem);
+}
+100% {
+  transform: translateY(0rem);
+} 
+}
+
+.card:hover {
+  transform: scale(1.15);
+}
+
